@@ -1,3 +1,3 @@
 bin_PROGRAMS = rsyncrypto
 
-rsyncrypto_SOURCES = main.cc crypto.cc crypt_key.cc aes_crypt.cc
+rsyncrypto_SOURCES = main.cc crypto.cc crypt_key.cc aes_crypt.cc file.cc
