@@ -1,3 +1,6 @@
+2005-02-10 Shachar Shemesh
+	* Implement recursive encryption of directory structures
+
 2005-02-08 Shachar Shemesh
 	* Implement encrypting a file from stdin. Useful for piping tar into
 	  rsyncrytpo.
